# esp32-rust-build-environment

./: Cargo.toml  Earthfile  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: main.rs
